# NoMoreAltF4

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
src/: NoMoreAltF4.cpp  NoMoreAltF4.h
